--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,8 @@
 
 {% block content %}
 
+<h1>Hello, {{ name }}</h1>
+
 {{ wtf.quick_form(form) }}
 
     <!-- <form class="form-horizontal col-sm-offset-3 col-md-offset-3">
