--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
 
@@ -7,6 +7,15 @@
 {% endblock title %}
 
 {% block content %}
+
+<div class='container'>
+    {% for message in get_flashed_messages() %}
+    <div class='alert alert-warning'>
+        <button type='button' class='close' data-dismiss='alert'>&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
 
 <h1>Hello, {{ name }}</h1>
 
