--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,19 @@
     {% endfor %}
 </div>
 
-<h1>Hello, {{ name }}</h1>
+<h1>Hello, 
+{% if name %}
+    {{ name }}
+{% else %}
+    Stranger
+{% endif %}
+</h1>
+
+{% if not known %}
+    <p>nice to meet you</p>
+{% else %}
+    <p>Happy to see you again </p>
+{% endif %}
 
 {{ wtf.quick_form(form) }}
 
